tests/diag/duplicate-decl.expected
tests/diag/duplicate-decl.wisp:2:1: error: duplicate source 'c'
  source c = mem();
  ^
