tests/diag/duplicate-decl.wisp
source c = cpu();
source c = mem();
